MergeSort benchmark (#27)
* Added variables for naming + fixed duplicate pypy call instead of python

* MergeSort benchmark

some projects are named fib, these will be changed later

* Printing result of fib

* undefined error in js

* undefined import c#

* New input + variable to runner (mergeSort)

* bracket fix (java mergeSort)

* static sorter java

* C# toString

* toString function call c#

* input formatting for both js and python

* print for c# mergeSort

* mergeParam missing js

* Number conversion python and js

* Number conversion fix python

* Added a large input to mergeSort

* fixed indentation java

* BigIntegers java and c#

* moved mergeSort input into another file

* renamed java and c# projects to mergeSort

* Update bench.md

* Update fib.sh

* Comment in run script and now prints <langauge> job done

* Indentation fix for C# MergeSort

* Removed some comments in java benches

* File path was wrong in the run script

* Errors in c# mergeSort

* Potential java big integer  fix + C# job done

* switch type of output java

* file reading error

* Bigger input for fib

* Update benchmarks/MergeSort/bench.md

Co-authored-by: Jakob <31919330+Jakobzs@users.noreply.github.com>

* Update benchmarks/FibSequence/fibjava/Bench.java

Co-authored-by: Jakob <31919330+Jakobzs@users.noreply.github.com>

* "Running benchmark comments"

* Comments in the benchmarks

---------

Co-authored-by: Jakob <31919330+Jakobzs@users.noreply.github.com>